# PicX-GUI

./: .gitignore  DESIGN_OPTIMIZATION_REPORT.md  DEVELOPMENT.md  LAYOUT_OPTIMIZATION.md  LICENSE  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  REFACTORING_PLAN.md  WINDOWS_LIBVIPS_BUNDLE.md  build.py  build_windows.bat  build_windows.spec  diagnose_libvips.py  main.py  pyproject.toml  requirements.txt  setup_libvips.py  方案.md
backup_customtkinter/: README.md  README_CN.md  requirements.txt
backup_customtkinter/gui/: __init__.py
backup_customtkinter/gui/locales/: __init__.py
backup_customtkinter/gui/styles/: __init__.py
backup_customtkinter/gui/tabs/: batch.py  single_image.py  tile.py
backup_customtkinter/gui/utils/: config.py  validators.py
backup_customtkinter/gui/widgets/: image_preview.py  progress_item.py
config/: default.json
flet_version/: install.bat  test_app.py  test_functional.py  test_simple.py
flet_version/gui/: app.py
flet_version/gui/styles/: __init__.py
flet_version/gui/tabs/: __init__.py  batch.py  tile.py
flet_version/gui/utils/: __init__.py
flet_version/gui/widgets/: __init__.py  file_selector.py  (+1 more)
flet_version/tests/: test_app.py
gui/: __init__.py  app.py
gui/locales/: __init__.py
gui/styles/: __init__.py  theme.py  theme_modern.py
gui/tabs/: batch.py  doctor.py  presets.py  single_image.py  single_image_optimized.py  tile.py
gui/utils/: __init__.py  keyboard_shortcuts.py  libvips_loader.py  task_manager.py
gui/widgets/: drop_zone.py  file_selector.py  image_preview.py  progress_item.py
tests/: test_gui.py
themes/: breeze.json
