[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "picx-gui"
version = "0.1.0"
description = "A modern GUI for PicX image optimization tool"
authors = [
    {name = "PicX GUI Team"}
]
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Graphics",
]
dependencies = [
    "customtkinter>=5.2.0",
    "picx-image-optimizer>=0.1.1",
    "Pillow>=10.0.0",
    "tkinterdnd2>=0.3.0",
    "typing-extensions>=4.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "mypy>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/ingeniousfrog/picx"
Repository = "https://github.com/ingeniousfrog/picx"

[project.scripts]
picx-gui = "main:main"

[tool.setuptools]
packages = ["gui", "gui.tabs", "gui.widgets", "gui.utils", "gui.styles"]

[tool.black]
line-length = 100
target-version = ['py38', 'py39', 'py310', 'py311']

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
